# antiscam

./: .gitignore  AntiScamBlog.sln  README.en.md  README.md  SYLLABUS_MAPPING.md  pyproject.toml  requirements-dev.txt  train.py
antiscam/: __init__.py  ai.py  api.py  cli.py  config.py  engine.py  links.py  logger.py  ml.py  models.py  normalization.py  patterns.py  scoring.py
antiscam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ai_ethics.md  ai_project_report.md  ai_syllabus_mapping.md  cryptography.md  demo.md  presentation_outline.md  project_report.md  security_audit.md
docs/ai_labs/: lab-01-machine-learning.md  lab-02-language-modeling.md  lab-03-translation-and-ner.md  lab-04-dialog-empathy-knowledge.md  lab-05-ml-engineering-cloud.md
docs/labs/: lab-01-risk-detection.md  lab-02-secure-blog-api.md  lab-03-incident-response.md  lab-04-cryptography.md
src/AntiScam.Blog.Api/: AntiScam.Blog.Api.csproj  Program.cs  WorkspaceOptions.cs  appsettings.json
src/AntiScam.Blog.Api/Data/: BlogDatabaseOptions.cs  IBlogRepository.cs  SqliteBlogRepository.cs
src/AntiScam.Blog.Api/Models/: BlogPost.cs  BlogPostInput.cs  BlogPostValidator.cs  RiskAssessment.cs  RiskStatuses.cs
src/AntiScam.Blog.Api/Security/: AesGcmAuthenticatedEncryptor.cs  (+5 more)
tests/: conftest.py
tests/AntiScam.Blog.Api.Tests/: AntiScam.Blog.Api.Tests.csproj
tests/integration/: test_api.py  test_workflows.py
tests/unit/: test_ai.py  test_config.py  test_engine.py  test_links.py  test_ml.py  test_models.py  test_normalization.py  test_scoring.py
(+16 files in other folders)
